--- a/index.html
+++ b/index.html
@@ -435,57 +435,61 @@
 <p>Department of Computer Science<br> Johns Hopkins University<br> 3400 N. Charles St.<br> Baltimore, MD 21218<br> <script type="text/javascript">
 <!--
 h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#114;&#100;&#x69;&#112;&#x69;&#x65;&#116;&#114;&#x6f;';e=n+a+h;
-document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
+document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
 // -->
-</script><noscript>&#114;&#100;&#x69;&#112;&#x69;&#x65;&#116;&#114;&#x6f;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript><br> <a href="http://www.r-dipietro.com">http://www.r-dipietro.com</a><br> <br></p>
+</script><noscript>&#114;&#100;&#x69;&#112;&#x69;&#x65;&#116;&#114;&#x6f;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript><br> <a href="http://www.r-dipietro.com" class="uri">http://www.r-dipietro.com</a><br> <br></p>
 <h2 id="research-interests">Research Interests</h2>
 <p>Machine learning and statistical signal processing, applied primarily to clinical care<br> <br></p>
 <h2 id="education">Education</h2>
 <table>
-	<col width="25%" />
-	<col width="61%" />
-	<tbody>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">09/13 – current</td>
-			<td align="left" valign="top"><strong>PhD Candidate, Computer Science</strong> <br> <strong>Johns Hopkins University</strong>, Baltimore, MD</td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">09/08 – 05/10</td>
-			<td align="left" valign="top"><strong>Master of Science, Electrical Engineering</strong> <br> <strong>Northeastern University</strong>, Boston, MA <br> Thesis: “The Detection of Sub-Pixel Objects and Mitigation of False Alarms in Hyperspectral Imagery” <br> GPA: 4.0 / 4.0</td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">09/05 – 05/10</td>
-			<td align="left" valign="top"><strong>Bachelor of Science, Applied Physics and Engineering</strong>, <em>summa cum laude</em> <br> <strong>Northeastern University</strong>, Boston, MA <br> GPA: 4.0 / 4.0</td>
-		</tr>
-	</tbody>
+<colgroup>
+<col width="25%" />
+<col width="61%" />
+</colgroup>
+<tbody>
+<tr class="bottom-spacing">
+<td align="left" valign="top">09/13 – current</td>
+<td align="left" valign="top"><strong>PhD Candidate, Computer Science</strong> <br> <strong>Johns Hopkins University</strong>, Baltimore, MD</td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">09/08 – 05/10</td>
+<td align="left" valign="top"><strong>Master of Science, Electrical Engineering</strong> <br> <strong>Northeastern University</strong>, Boston, MA <br> Thesis: “The Detection of Sub-Pixel Objects and Mitigation of False Alarms in Hyperspectral Imagery” <br> GPA: 4.0 / 4.0</td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">09/05 – 05/10</td>
+<td align="left" valign="top"><strong>Bachelor of Science, Applied Physics and Engineering</strong>, <em>summa cum laude</em> <br> <strong>Northeastern University</strong>, Boston, MA <br> GPA: 4.0 / 4.0</td>
+</tr>
+</tbody>
 </table>
 <p><br></p>
 <h2 id="research-and-professional-experience">Research and Professional Experience</h2>
 <table>
-	<col width="25%" />
-	<col width="61%" />
-	<tbody>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">09/13 – current</td>
-			<td align="left" valign="top"><strong>Johns Hopkins University</strong>, <em>Graduate Research Assistant / Teaching Assistant</em> <br> Advisors: Prof. Gregory Hager and Prof. Nassir Navab<br> Focus: Surgical activity recognition and skill assessment using kinematic and video data</td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">06/10 – 07/13</td>
-			<td align="left" valign="top"><strong>MIT Lincoln Laboratory</strong>, <em>Associate Research Staff</em> <br> Advisor: Dr. Dimitris Manolakis and Dr. Gregory Berthiaume <br> Focus: Chemical warfare agent detection in long-wave hyperspectral imagery</td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">05/09 – 05/10</td>
-			<td align="left" valign="top"><strong>Northeastern University</strong>, <em>Graduate Research Assistant</em> <br> Advisors: Prof. Vinay Ingle and Dr. Dimitris Manolakis <br> Focus: Spatially-unresolved object detection in short-wave hyperspectral imagery</td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">07/08 – 05/09</td>
-			<td align="left" valign="top"><strong>Northeastern University</strong>, <em>Undergraduate Research Assistant</em> <br> Advisor: Prof. Donald Heiman <br> Focus: Magnetic nanoparticle and nanowire characterization</td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">05/07 – 12/07</td>
-			<td align="left" valign="top"><strong>iRobot Corporation</strong>, <em>Engineering Intern</em> <br> Designed, drafted, and machined test fixtures for the iRobot Looj robot</td>
-		</tr>
-	</tbody>
+<colgroup>
+<col width="25%" />
+<col width="61%" />
+</colgroup>
+<tbody>
+<tr class="bottom-spacing">
+<td align="left" valign="top">09/13 – current</td>
+<td align="left" valign="top"><strong>Johns Hopkins University</strong>, <em>Graduate Research Assistant / Teaching Assistant</em> <br> Advisors: Prof. Gregory Hager, Prof. Austin Reiter, and Prof. Nassir Navab<br> Focus: Learning representations of video for fine-grained activity recognition</td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">06/10 – 07/13</td>
+<td align="left" valign="top"><strong>MIT Lincoln Laboratory</strong>, <em>Associate Research Staff</em> <br> Advisor: Dr. Dimitris Manolakis and Dr. Gregory Berthiaume <br> Focus: Chemical warfare agent detection in long-wave hyperspectral imagery</td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">05/09 – 05/10</td>
+<td align="left" valign="top"><strong>Northeastern University</strong>, <em>Graduate Research Assistant</em> <br> Advisors: Prof. Vinay Ingle and Dr. Dimitris Manolakis <br> Focus: Spatially-unresolved object detection in short-wave hyperspectral imagery</td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">07/08 – 05/09</td>
+<td align="left" valign="top"><strong>Northeastern University</strong>, <em>Undergraduate Research Assistant</em> <br> Advisor: Prof. Donald Heiman <br> Focus: Magnetic nanoparticle and nanowire characterization</td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">05/07 – 12/07</td>
+<td align="left" valign="top"><strong>iRobot Corporation</strong>, <em>Engineering Intern</em> <br> Designed, drafted, and machined test fixtures for the iRobot Looj robot</td>
+</tr>
+</tbody>
 </table>
 <p><br></p>
 <h2 id="publications">Publications</h2>
@@ -503,51 +507,60 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <h2 id="teaching-experience">Teaching Experience</h2>
 <p><strong>Johns Hopkins University</strong>, Baltimore, MD</p>
 <table>
-	<col width="27%" />
-	<col width="61%" />
-	<tbody>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">2014 Spring</td>
-			<td align="left" valign="top">Co-Instructor for EN.600.120, Intermediate Programming</td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">2014 Intersession</td>
-			<td align="left" valign="top">Instructor for EN.600.101, MATLAB for Data Analytics</td>
-		</tr>
-	</tbody>
+<colgroup>
+<col width="27%" />
+<col width="61%" />
+</colgroup>
+<tbody>
+<tr class="bottom-spacing">
+<td align="left" valign="top">2015 Fall</td>
+<td align="left" valign="top">Instructor for EN.500.111, HEART: Machine Learning for Surgical Workflow Analysis</td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">2014 Spring</td>
+<td align="left" valign="top">Co-Instructor for EN.600.120, Intermediate Programming</td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">2014 Intersession</td>
+<td align="left" valign="top">Instructor for EN.600.101, MATLAB for Data Analytics</td>
+</tr>
+</tbody>
 </table>
 <p><br></p>
 <h2 id="awards-and-honors">Awards and Honors</h2>
 <table>
-	<col width="15%" />
-	<col width="61%" />
-	<tbody>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">2014</td>
-			<td align="left" valign="top"><strong>Intuitive Surgical Fellowship (2014–2015), Johns Hopkins University</strong></td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">2014</td>
-			<td align="left" valign="top"><strong>International Exchange Program, Johns Hopkins University and Technical University of Munich</strong> <br> US-Germany Research Collaboration on Medical Systems Engineering</td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">2013</td>
-			<td align="left" valign="top"><strong>Louis M. Brown Engineering Fellowship, Johns Hopkins University</strong></td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">2012</td>
-			<td align="left" valign="top"><strong>Team Award, MIT Lincoln Laboratory</strong></td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">2009</td>
-			<td align="left" valign="top"><strong>Eta Kappa Nu, Northeastern University</strong> <br> Electrical and Computer Engineering Honor Society</td>
-		</tr>
-		<tr class="bottom-spacing">
-			<td align="left" valign="top">2007</td>
-			<td align="left" valign="top"><strong>Sigma Pi Sigma, Northeastern University</strong> <br> Physics Honor Society</td>
-		</tr>
-	</tbody>
+<colgroup>
+<col width="15%" />
+<col width="61%" />
+</colgroup>
+<tbody>
+<tr class="bottom-spacing">
+<td align="left" valign="top">2014</td>
+<td align="left" valign="top"><strong>Intuitive Surgical Fellowship (2014–2015), Johns Hopkins University</strong></td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">2014</td>
+<td align="left" valign="top"><strong>International Exchange Program, Johns Hopkins University and Technical University of Munich</strong> <br> US-Germany Research Collaboration on Medical Systems Engineering</td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">2013</td>
+<td align="left" valign="top"><strong>Louis M. Brown Engineering Fellowship, Johns Hopkins University</strong></td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">2012</td>
+<td align="left" valign="top"><strong>Team Award, MIT Lincoln Laboratory</strong></td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">2009</td>
+<td align="left" valign="top"><strong>Eta Kappa Nu, Northeastern University</strong> <br> Electrical and Computer Engineering Honor Society</td>
+</tr>
+<tr class="bottom-spacing">
+<td align="left" valign="top">2007</td>
+<td align="left" valign="top"><strong>Sigma Pi Sigma, Northeastern University</strong> <br> Physics Honor Society</td>
+</tr>
+</tbody>
 </table>
+
 
 
 
