Change squirrel picture

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 							<article class="col-sm-4">
 
 								<section class="imgWrapper">
-									<img src="media/DSC_0075.JPG" class="img-responsive" alt="Squirrel" />
+									<img src="media/DSC_0039.JPG" class="img-responsive" alt="Ammersee" />
 								</section>
 
 								<section class="newsText color4">
