Update teaching and remove CNAME

--- a/index.html
+++ b/index.html
@@ -218,17 +218,22 @@
 
 							<div class="col-sm-4">
 
+								<h2>Machine Learning for Surgical Workflow Analysis<br>(Instructor)</h2>
+
+								<p>In this course, students are exposed to machine learning, programming in Python, and applications to surgical workflow analysis. Johns Hopkins, Fall, 2015.</p>
+							    <br>
+								
 								<h2>Intermediate Programming<br>(Co-Instructor)</h2>
 
-								<p>The goal of this course is to teach students how to program effectively: how to design programs, how to write code that's efficient but simple, and how to debug code when it's not working. For more information, please see Prof. Yair Amir's <a href="http://www.cnds.jhu.edu/courses/cs120/">course page</a>. Johns Hopkins, Spring, 2014.</p>
-
+								<p>In this course, students learn to program effectively: how to design programs, how to write code that's efficient but simple, and how to debug code when it's not working. For more information, please see Prof. Yair Amir's <a href="http://www.cnds.jhu.edu/courses/cs120/">course page</a>. Johns Hopkins, Spring, 2014.</p>
+	
 							</div>
 
 							<div class="col-sm-4">
 
 								<h2>MATLAB for Data Analytics<br>(Instructor)</h2>
 
-								<p>The goals of this course are 1) to introduce students with no programming experience to MATLAB and 2) to show them how to analyze and visualize data using MATLAB. For more information, please see my <a href="https://piazza.com/demo_login?nid=hpsn2tik7me2u6&auth=7165af0">Piazza page</a>. Johns Hopkins, Intersession, 2014.</p>
+								<p>In this course, students with no programming experience learn to analyze and visualize data in MATLAB. Johns Hopkins, Intersession, 2014.</p>
 
 							</div>
 
