Fix broken CV link

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
 							<div class="col-sm-8">
 
-<p>For a PDF version, please click <a href="http://www.r-dipietro.com/dipietro_cv.pdf">here</a>.</p>
+<p>For a PDF version, please click <a href="http://rdipietro.github.io/dipietro_cv.pdf">here</a>.</p>
 <p>For links to the publications below, please see my <a href="http://scholar.google.com/citations?user=hgSJHaUAAAAJ">Google Scholar page</a>.</p>
 <br />
 
