--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 <tbody>
 <tr class="bottom-spacing">
 <td align="left" valign="top">09/13 – current</td>
-<td align="left" valign="top"><strong>Johns Hopkins University</strong>, <em>Graduate Research Assistant / Teaching Assistant</em> <br> Advisors: Prof. Gregory Hager, Prof. Austin Reiter, and Prof. Nassir Navab<br> Focus: Learning representations of video for fine-grained activity recognition</td>
+<td align="left" valign="top"><strong>Johns Hopkins University</strong>, <em>Graduate Research Assistant / Teaching Assistant</em> <br> Advisors: Prof. Gregory Hager, Prof. Austin Reiter, and Prof. Nassir Navab<br> Focus: Fine-grained activity recognition from video, kinematics, etc.</td>
 </tr>
 <tr class="bottom-spacing">
 <td align="left" valign="top">06/10 – 07/13</td>
@@ -565,6 +565,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </tr>
 </tbody>
 </table>
+
 
 
 
