--- a/index.html
+++ b/index.html
@@ -187,10 +187,9 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Robert-DiPietro">Robert DiPietro<a class="anchor-link" href="#Robert-DiPietro">&#182;</a></h3><p><img src="images/rob.jpg" alt="Rob"></p>
+<p><img src="images/rob.jpg" alt="Rob"></p>
 <p>Welcome.</p>
-<p>I'm Rob, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a> and <a href="https://www.cs.jhu.edu/faculty/nassir-navab/">Nassir Navab</a>. Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a>.</p>
-<p>My research is centered around machine-learning methods for modeling sequential data, and I'm especially interested in recurrent neural networks and attention-based approaches. From an applications perspective, I focus on health care. For example, <a href="http://www.nejm.org/doi/full/10.1056/NEJMsa1300625">operative skill is connected to postoperative complications</a>, and <a href="http://www.ncbi.nlm.nih.gov/pubmed/19789010">current training practices need to improve</a> – is it possible to automatically analyze trainee performance and automatically provide frequent, object feedback? In addition, I find teaching fun, and I enjoy trying to explain concepts in ways that are as clear and concise as possible.</p>
+<p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>. I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a> and <a href="https://www.cs.jhu.edu/faculty/nassir-navab/">Nassir Navab</a>. Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a>. My previous research and studies were in the areas of physics and electrical engineering.</p>
 
 </div>
 </div>
@@ -200,6 +199,33 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Contents">Contents<a class="anchor-link" href="#Contents">&#182;</a></h2><ul>
+<li><a href="#research">Research</a></li>
+<li><a href="#tutorials">Tutorials</a></li>
+<li><a href="#teaching">Teaching</a></li>
+<li><a href="#curriculum-vitae-publications">Curriculum Vitae / Publications</a></li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><a id="research"></a></p>
+<h2 id="Research">Research<a class="anchor-link" href="#Research">&#182;</a></h2><p>My research is centered around machine-learning methods for modeling sequential data, and I'm especially interested in recurrent neural networks and attention-based approaches. From an applications perspective, I focus on health care. For example, <a href="http://www.nejm.org/doi/full/10.1056/NEJMsa1300625">operative skill is connected to postoperative complications</a>, and <a href="http://www.ncbi.nlm.nih.gov/pubmed/19789010">current training practices need to improve</a> – is it possible to automatically analyze trainee performance and automatically provide frequent, object feedback? In addition, I find teaching fun, and I enjoy trying to explain concepts in ways that are as clear and concise as possible.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><a id="tutorials"></a></p>
 <h2 id="Tutorials">Tutorials<a class="anchor-link" href="#Tutorials">&#182;</a></h2><p><a href="http://rdipietro.github.io/tensorflow-scan-examples">Using TensorFlow's scan function to build a recurrent neural network from scratch.</a> In this post, we go over TensorFlow's <code>scan</code> function. First we provide a simple example to compute cumulative sums. Then we provide a more complex example where we <em>learn</em> the cumulative-sum function by building and training a recurrent neural network.</p>
 
 </div>
@@ -210,6 +236,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><a id="teaching"></a></p>
 <h2 id="Teaching">Teaching<a class="anchor-link" href="#Teaching">&#182;</a></h2><p><strong>Spring, 2016. Johns Hopkins University.</strong> Received the Excellence in Teaching Award from the Department of Computer Science.</p>
 <p><strong>Fall, 2015. Johns Hopkins University. Instructor, Machine Learning for Surgical Workflow Analysis.</strong> In this course, students are exposed to basic machine-learning concepts and to some applications to surgical workflow analysis. About half of the course is taught thinking through problems using IPython notebooks.</p>
 <p><strong>Spring, 2015. Johns Hopkins University. Teaching Assistant, Machine Learning: Data to Models.</strong> In this course, students learn about probabilistic graphical models and various exact inference and approximate inference techniques.</p>
@@ -224,6 +251,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><a id="curriculum-vitae-publications"></a></p>
 <h2 id="Curriculum-Vitae-/-Publications">Curriculum Vitae / Publications<a class="anchor-link" href="#Curriculum-Vitae-/-Publications">&#182;</a></h2><p>My CV can be found <a href="dipietro_cv.pdf">here</a>.</p>
 <p>Publications can be found <a href="https://scholar.google.com/citations?user=hgSJHaUAAAAJ">here</a>.</p>
 
