--- a/index.html
+++ b/index.html
@@ -188,8 +188,6 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><img src="images/rob.jpg" alt="Rob"></p>
-<p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a> and <a href="https://www.cs.jhu.edu/faculty/nassir-navab/">Nassir Navab</a>. My current research focuses on machine-learning methods for modeling sequential data, and applications of those methods to health care. In addition to research, I enjoy teaching and trying to explain concepts in ways that are as clear and concise as possible.</p>
-<p>Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a student at <a href="http://www.northeastern.edu/">Northeastern University</a>. My research at MIT LL and as an electrical-engineering masters student focused on detecting chemicals and materials in hyperspectral imagery. My research as an applied-physics undergraduate student focused on characterizing collections of supermagnetic nanoparticles.</p>
 
 </div>
 </div>
@@ -200,11 +198,24 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Contents">Contents<a class="anchor-link" href="#Contents">&#182;</a></h2><ul>
+<li><a href="#about-me">About Me</a></li>
 <li><a href="#research">Research</a></li>
 <li><a href="#tutorials">Tutorials</a></li>
 <li><a href="#teaching">Teaching</a></li>
 <li><a href="#curriculum-vitae-publications">Curriculum Vitae / Publications</a></li>
 </ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><a id="about-me"></a></p>
+<h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a> and <a href="https://www.cs.jhu.edu/faculty/nassir-navab/">Nassir Navab</a>. My current research focuses on machine-learning methods for modeling sequential data, and applications of those methods to health care. In addition to research, I enjoy teaching and trying to explain concepts in ways that are as clear and concise as possible.</p>
+<p>Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a student at <a href="http://www.northeastern.edu/">Northeastern University</a>. My research at MIT LL and as an electrical-engineering masters student focused on detecting chemicals and materials in hyperspectral imagery. My research as an applied-physics undergraduate student focused on characterizing collections of supermagnetic nanoparticles.</p>
 
 </div>
 </div>
