Update homepage and modify CSS

--- a/index.html
+++ b/index.html
@@ -237,7 +237,9 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="tutorials"></a></p>
-<h2 id="Tutorials">Tutorials<a class="anchor-link" href="#Tutorials">&#182;</a></h2><p><a href="http://rdipietro.github.io/tensorflow-scan-examples">Using TensorFlow's scan function to build a recurrent neural network from scratch.</a> In this post, we go over TensorFlow's <code>scan</code> function. First we provide a simple example to compute cumulative sums. Then we provide a more complex example where we <em>learn</em> the cumulative-sum function by building and training a recurrent neural network.</p>
+<h2 id="Tutorials">Tutorials<a class="anchor-link" href="#Tutorials">&#182;</a></h2><ul>
+<li><a href="http://rdipietro.github.io/tensorflow-scan-examples">Using TensorFlow's scan function to build a recurrent neural network from scratch.</a> In this post, we go over TensorFlow's <code>scan</code> function. First we provide a simple example to compute cumulative sums. Then we provide a more complex example where we <em>learn</em> the cumulative-sum function by building and training a recurrent neural network.</li>
+</ul>
 
 </div>
 </div>
@@ -248,11 +250,13 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="teaching"></a></p>
-<h2 id="Teaching">Teaching<a class="anchor-link" href="#Teaching">&#182;</a></h2><p><strong>Spring, 2016. Johns Hopkins University.</strong> Received the Excellence in Teaching Award from the Department of Computer Science.</p>
-<p><strong>Fall, 2015. Johns Hopkins University. Instructor, Machine Learning for Surgical Workflow Analysis.</strong> In this course, students are exposed to basic machine-learning concepts and to some applications to surgical workflow analysis. About half of the course is taught thinking through problems using IPython notebooks.</p>
-<p><strong>Spring, 2015. Johns Hopkins University. Teaching Assistant, Machine Learning: Data to Models.</strong> In this course, students learn about probabilistic graphical models and various exact inference and approximate inference techniques.</p>
-<p><strong>Spring, 2014. Johns Hopkins University. Co-Instructor, Intermediate Programming.</strong> In this course, students learn how to design programs, how to write code that's efficient but simple, and how to debug code when it's not working (C and C++). For more information, see Prof. Yair Amir's <a href="http://www.cnds.jhu.edu/courses/cs120/">course page</a>.</p>
-<p><strong>Intersession, 2014. Johns Hopkins University. Instructor, MATLAB for Data Analytics.</strong> In this course, students with no prior programming experience learn to analyze and visualize data using MATLAB.</p>
+<h2 id="Teaching">Teaching<a class="anchor-link" href="#Teaching">&#182;</a></h2><ul>
+<li><strong>Spring, 2016. Johns Hopkins University.</strong> Received the Excellence in Teaching Award from the Department of Computer Science.</li>
+<li><strong>Fall, 2015. Johns Hopkins University. Instructor, Machine Learning for Surgical Workflow Analysis.</strong> In this course, students are exposed to basic machine-learning concepts and to some applications to surgical workflow analysis. About half of the course is taught thinking through problems using IPython notebooks.</li>
+<li><strong>Spring, 2015. Johns Hopkins University. Teaching Assistant, Machine Learning: Data to Models.</strong> In this course, students learn about probabilistic graphical models and various exact inference and approximate inference techniques.</li>
+<li><strong>Spring, 2014. Johns Hopkins University. Co-Instructor, Intermediate Programming.</strong> In this course, students learn how to design programs, how to write code that's efficient but simple, and how to debug code when it's not working (C and C++). For more information, see Prof. Yair Amir's <a href="http://www.cnds.jhu.edu/courses/cs120/">course page</a>.</li>
+<li><strong>Intersession, 2014. Johns Hopkins University. Instructor, MATLAB for Data Analytics.</strong> In this course, students with no prior programming experience learn to analyze and visualize data using MATLAB.</li>
+</ul>
 
 </div>
 </div>
