--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="about-me"></a></p>
 <h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a> and <a href="https://www.cs.jhu.edu/faculty/nassir-navab/">Nassir Navab</a>. My current research focuses on machine-learning methods for modeling sequential data, and applications of those methods to health care. In addition to research, I enjoy teaching and trying to explain concepts in ways that are as clear and concise as possible.</p>
-<p>Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a student at <a href="http://www.northeastern.edu/">Northeastern University</a>. My research at MIT LL and as an electrical-engineering masters student focused on detecting chemicals and materials in hyperspectral imagery. My research as an applied-physics undergraduate student focused on characterizing collections of supermagnetic nanoparticles.</p>
+<p>Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a student at <a href="http://www.northeastern.edu/">Northeastern University</a>. My research at MIT LL and as an electrical-engineering masters student focused on detecting chemicals and materials in hyperspectral imagery. My research as an applied-physics undergraduate student focused on characterizing collections of magnetic nanoparticles.</p>
 
 </div>
 </div>
@@ -238,7 +238,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="tutorials"></a></p>
 <h2 id="Tutorials">Tutorials<a class="anchor-link" href="#Tutorials">&#182;</a></h2><ul>
-<li><a href="http://rdipietro.github.io/tensorflow-scan-examples">Using TensorFlow's scan function to build a recurrent neural network from scratch.</a> In this post, we go over TensorFlow's <code>scan</code> function. First we provide a simple example to compute cumulative sums. Then we provide a more complex example where we <em>learn</em> the cumulative-sum function by building and training a recurrent neural network.</li>
+<li><a href="http://rdipietro.github.io/tensorflow-scan-examples">Using TensorFlow's scan function to build a recurrent neural network from scratch.</a> In this post, we'll start with a simple example using <code>scan</code> to compute cumulative sums, and then move on to a more complex example where we'll <em>learn</em> the cumulative-sum function by building and training a recurrent neural network.</li>
 </ul>
 
 </div>
