--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="tutorials"></a></p>
 <h2 id="Tutorials">Tutorials<a class="anchor-link" href="#Tutorials">&#182;</a></h2><ul>
-<li><a href="http://rdipietro.github.io/tensorflow-scan-examples">Using TensorFlow's scan function to build a recurrent neural network from scratch.</a> In this post, we'll start with a simple example using <code>scan</code> to compute cumulative sums, and then move on to a more complex example where we'll <em>learn</em> the cumulative-sum function by building and training a recurrent neural network.</li>
+<li><a href="http://rdipietro.github.io/tensorflow-scan-examples">Using TensorFlow's scan function to build a recurrent neural network from scratch.</a></li>
 </ul>
 
 </div>
