--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ div#notebook {
 <li><a href="#tutorials">Tutorials</a></li>
 <li><a href="#teaching">Teaching</a></li>
 <li><a href="#curriculum-vitae-publications">Curriculum Vitae / Publications</a></li>
+<li><a href="#fun">Fun</a></li>
 </ul>
 
 </div>
@@ -214,7 +215,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="about-me"></a></p>
-<h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a> and <a href="https://www.cs.jhu.edu/faculty/nassir-navab/">Nassir Navab</a>. My current research focuses on machine-learning methods for modeling sequential data, and applications of those methods to health care. In addition to research, I enjoy teaching and trying to explain concepts in ways that are as clear and concise as possible.</p>
+<h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p>Welcome. I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a> and <a href="https://www.cs.jhu.edu/faculty/nassir-navab/">Nassir Navab</a>. My research focuses on machine-learning methods for modeling sequential data, and applications of those methods to health care. I also have fun teaching and enjoy trying to break concepts up into clear and concise pieces.</p>
 <p>Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a student at <a href="http://www.northeastern.edu/">Northeastern University</a>. My research at MIT LL and as an electrical-engineering masters student focused on detecting chemicals and materials in hyperspectral imagery. My research as an applied-physics undergraduate student focused on characterizing collections of magnetic nanoparticles.</p>
 
 </div>
@@ -269,6 +270,19 @@ div#notebook {
 <p><a id="curriculum-vitae-publications"></a></p>
 <h2 id="Curriculum-Vitae-/-Publications">Curriculum Vitae / Publications<a class="anchor-link" href="#Curriculum-Vitae-/-Publications">&#182;</a></h2><p>My CV can be found <a href="dipietro_cv.pdf">here</a>.</p>
 <p>Publications can be found <a href="https://scholar.google.com/citations?user=hgSJHaUAAAAJ">here</a>.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><a id="fun"></a></p>
+<h2 id="Some-Fun">Some Fun<a class="anchor-link" href="#Some-Fun">&#182;</a></h2><h4 id="Skydiving-in-Switzerland-(2010)">Skydiving in Switzerland (2010)<a class="anchor-link" href="#Skydiving-in-Switzerland-(2010)">&#182;</a></h4><p><img src="images/skydiving.jpg" alt="Skydiving"></p>
+<h4 id="Paragliding-in-Switzerland-(2014)">Paragliding in Switzerland (2014)<a class="anchor-link" href="#Paragliding-in-Switzerland-(2014)">&#182;</a></h4><p><img src="images/paragliding.jpg" alt="Paragliding"></p>
+<h4 id="View-from-the-Zugspitze-(2016)">View from the Zugspitze (2016)<a class="anchor-link" href="#View-from-the-Zugspitze-(2016)">&#182;</a></h4><p><img src="images/zugspitze.jpg" alt="Zugspitze"></p>
 
 </div>
 </div>
