--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ div#notebook {
 <li><a href="#tutorials">Tutorials</a></li>
 <li><a href="#teaching">Teaching</a></li>
 <li><a href="#curriculum-vitae-publications">Curriculum Vitae / Publications</a></li>
-<li><a href="#fun">Fun</a></li>
+<li><a href="#some-fun">Some Fun</a></li>
 </ul>
 
 </div>
@@ -279,7 +279,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><a id="fun"></a></p>
+<p><a id="some-fun"></a></p>
 <h2 id="Some-Fun">Some Fun<a class="anchor-link" href="#Some-Fun">&#182;</a></h2><h4 id="Skydiving-in-Switzerland-(2010)">Skydiving in Switzerland (2010)<a class="anchor-link" href="#Skydiving-in-Switzerland-(2010)">&#182;</a></h4><p><img src="images/skydiving.jpg" alt="Skydiving"></p>
 <h4 id="Paragliding-in-Switzerland-(2014)">Paragliding in Switzerland (2014)<a class="anchor-link" href="#Paragliding-in-Switzerland-(2014)">&#182;</a></h4><p><img src="images/paragliding.jpg" alt="Paragliding"></p>
 <h4 id="View-from-the-Zugspitze-(2016)">View from the Zugspitze (2016)<a class="anchor-link" href="#View-from-the-Zugspitze-(2016)">&#182;</a></h4><p><img src="images/zugspitze.jpg" alt="Zugspitze"></p>
