--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="curriculum-vitae-publications"></a></p>
-<h2 id="Curriculum-Vitae-/-Publications">Curriculum Vitae / Publications<a class="anchor-link" href="#Curriculum-Vitae-/-Publications">&#182;</a></h2><p>My CV can be found <a href="dipietro_cv.pdf">here</a>.</p>
-<p>Publications can be found <a href="https://scholar.google.com/citations?user=hgSJHaUAAAAJ">here</a>.</p>
+<h2 id="Curriculum-Vitae-/-Publications">Curriculum Vitae / Publications<a class="anchor-link" href="#Curriculum-Vitae-/-Publications">&#182;</a></h2><p>My CV is <a href="dipietro_cv.pdf">here</a> and my publications are <a href="https://scholar.google.com/citations?user=hgSJHaUAAAAJ">here</a>.</p>
 
 </div>
 </div>
